<resources>
    <string name="app_name">Twilio Rider</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_choose_mode">Choose Mode</string>

    <!-- Strings related to login activity-->
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to choose mode activity-->
    <string name="choose_mode_intro_text">Would you prefer to?</string>
    <string name="choose_mode_ride">Ride</string>
    <string name="choose_mode_drive">Drive</string>
    <string name="choose_mode_carpool">Start Carpooling</string>


    <!-- Strings related to main activity-->
    <string name="main_activity_title_text">Upcoming Rides</string>
    <string name="main_Activity_no_upcoming">You have no upcoming rides currently.</string>

    <!-- Strings related to menu bar-->
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_drawer_open">Drawer open</string>
    <string name="action_drawer_close">Drawer closed</string>


    <string name="radio_sf">San Francisco (HQ)</string>
    <string name="radio_mv">Mountain View</string>

</resources>
