<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/set_idle_drawer"

            android:icon="@drawable/ic_update_white_24dp"
            android:title="Reset availability" />

        <item
            android:id="@+id/settings_drawer"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />


        <item
            android:id="@+id/help_drawer"

            android:icon="@drawable/ic_help"
            android:title="@string/action_help" />
        <item
            android:id="@+id/about_drawer"

            android:icon="@drawable/ic_info"
            android:title="@string/action_about" />

        <item
            android:id="@+id/logout_drawer"

            android:icon="@drawable/ic_logout"
            android:title="@string/action_logout" />

    </group>

</menu>